--- a/desarrollo/practica.html
+++ b/desarrollo/practica.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CCS: EJEMPLO</title>
-    <link rel="stylesheet" type="text/css" href="desarrollo/css/estilo.css" />
+    <title>Document</title>
 </head>
 <body>
     
-<h1>Tituloooo</h1>
 
-<p>Holaaaaa</p>
+<p> hola que tal, soy el chico <strong> de las poesias</strong> , su fiel admirador</p>
 
-<p>Hoasdasdasda</p>
-
-<p>wasaaaaaaaaaaaaaa</p>
 
 </body>
 </html>
