--- a/desarrollo/cv-proyecto-final-2023.html
+++ b/desarrollo/cv-proyecto-final-2023.html
@@ -1,6 +1,8 @@
 
 
-   LINK DE ENTREGA DE PROYECTO MAL SUBIDO, DEJO EL LINK CORRECTO A CONTINUACIÓN:
+   LINK DE ENTREGA DE PROYECTO MAL SUBIDO
+
+    DEJO EL LINK CORRECTO A CONTINUACIÓN:
 
 https://leandrodw.github.io/
 
